k8s/eks-rds-old/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bia-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: bia-application-load-balancer
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/subnets: subnet-034c2e9f99e545878,subnet-089cbc2709b8dc5dc
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:976808777516:certificate/a5368b26-d5e7-4606-93bb-b7d764c5575c
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30    
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bia
            port:
              number: 8080
